--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
   },
   "dependencies": {
     "@types/styled-components": "^5.1.25",
+    "jotai": "^1.7.2",
+    "ky": "^0.31.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-router-dom": "^6.3.0",
+    "spotify-web-api-js": "^1.5.2",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
