--- a/package.json
+++ b/package.json
@@ -8,14 +8,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/fiber": "^8.0.27",
     "@types/styled-components": "^5.1.25",
+    "@types/three": "^0.141.0",
+    "axios": "^0.27.2",
     "jotai": "^1.7.2",
-    "ky": "^0.31.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
-    "spotify-web-api-js": "^1.5.2",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "three": "^0.142.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
