--- a/package.json
+++ b/package.json
@@ -12,17 +12,21 @@
     "@types/styled-components": "^5.1.25",
     "@types/three": "^0.141.0",
     "axios": "^0.27.2",
+    "drei": "^2.2.21",
     "jotai": "^1.7.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
     "styled-components": "^5.3.5",
-    "three": "^0.142.0"
+    "styled-icons": "^10.45.0",
+    "three": "^0.142.0",
+    "use-cannon": "^0.5.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
+    "prettier": "^2.7.1",
     "typescript": "^4.6.3",
     "vite": "^2.9.9"
   }
