--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/drei": "^9.14.3",
     "@react-three/fiber": "^8.0.27",
     "@types/styled-components": "^5.1.25",
     "@types/three": "^0.141.0",
