--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
+    "recharts": "^2.1.12",
     "styled-components": "^5.3.5",
     "styled-icons": "^10.45.0",
     "three": "^0.142.0",
